# Teligence

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE_NOTES.md  Dockerfile  Makefile  README.md  compose.yaml  config.py  data_utils.py  docker-compose.yml  gpt.py  icarus_projective_actionptr_v2.py  launcher.py  modeling.py  proof_gpt_agent_onefile.py  pyproject.toml  runtime.py  train_utils.py
.github/workflows/: smoke.yml
configs/: README.md
configs/litellm/: litellm-config.yaml
configs/opencode/: opencode.jsonc
experiments/: __init__.py  icarus_projective_actionptr_v2.py  proof_affine_domain.py  proof_affine_gpt.py  proof_factoring_domain.py  proof_factoring_gpt.py  proof_rewrite_gpt.py
gateways/litellm/: entrypoint.sh
projects/example/: .dockerignore  .gitignore.project  Dockerfile  apt.packages  compose.yaml  project.env  project.env.example  requirements.extra.txt
projects/example/scripts/: entrypoint.sh
projects/example/scripts/bootstrap.d/: 10-git.sh  20-netrc.sh  30-gh.sh  40-opencode.sh
research/: README.md  __init__.py  program.md  results.template.tsv  score.py
scripts/: __init__.py  autoresearch_loop.py  benchmark_matrix.py  gpt_text.py  launcher.py  sweep.py
teligence/: __init__.py  action_heads.py  config.py  data_utils.py  experiment_utils.py  modeling.py  run_utils.py  tokenizer.py  train_utils.py
templates/project/: .dockerignore  .gitignore.project  Dockerfile  apt.packages  compose.yaml  project.env.example
templates/project/scripts/: entrypoint.sh
tests/: test_smoke.py
(+6 files in other folders)
